samples/_failures_safe/1761002582_0a52cf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4aac4ffd.c: In function ‘main’:
./samples/SAFE/__tmp_4aac4ffd.c:158:25: error: expected ‘;’ at end of input
  158 |         print_token_type
      |                         ^
      |                         ;
./samples/SAFE/__tmp_4aac4ffd.c:158:9: error: expected declaration or statement at end of input
  158 |         print_token_type
      |         ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_4aac4ffd.c:158:9: error: expected declaration or statement at end of input
